--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
 <script>
   const STEP_EXPIRY_MS = 365 * 24 * 60 * 60 * 1000;
-  const step3Links = ["https://youtu.be/0vR6P8gIS9k"];
+  const step3Links = ["https://youtu.be/ySAlw1O0sog?si=nAOJfDZXdHdRpE5z"];
   const savedState = JSON.parse(localStorage.getItem("stepsState") || "{}");
   const step3StorageKey = "step3State_ff_v1_script1vip";
   const step3Data = JSON.parse(localStorage.getItem(step3StorageKey) || "{}");
