--- a/index.html
+++ b/index.html
@@ -222,18 +222,10 @@
 </div>
 
 <script>
-  const pageId = "ar1"; // ✅ معرف مميز للصفحة
   const STEP_EXPIRY_MS = 365 * 24 * 60 * 60 * 1000;
   const step3Links = ["https://youtu.be/ySAlw1O0sog?si=nAOJfDZXdHdRpE5z"];
-  const step3StorageKey = "step3State_ff_v1_" + pageId; // 👈 تخزين خاص للخطوة 3
-  const step4StorageKey = "step4State_ff_v1_script1vip";
-
-  function saveStepState(step) {
-    const currentState = JSON.parse(localStorage.getItem("stepsState") || "{}");
-    currentState["step" + step] = true;
-    currentState.timestamp = Date.now();
-    localStorage.setItem("stepsState", JSON.stringify(currentState));
-  }
+  const step3StorageKey = "step3State_ff_v1_script1vip";
+  const step4StorageKey = "step4State_ff_v1_script1vip_telegram";
 
   const savedState = JSON.parse(localStorage.getItem("stepsState") || "{}");
   const step3Data = JSON.parse(localStorage.getItem(step3StorageKey) || "{}");
@@ -264,12 +256,13 @@
           if (nextStep) nextStep.classList.add("active");
         } else break;
       }
+
       if (savedState.step2 && !step3Data.completed) {
         document.getElementById("step3").classList.add("active");
       }
       if (step3Data.completed) {
-  document.getElementById("step4").classList.add("active");
-}
+        document.getElementById("step4").classList.add("active");
+      }
       unlockButtons();
       updateProgressBar();
     } else {
@@ -279,96 +272,93 @@
     }
   };
 
-  function completeStep(step, url) {
-  const checkSpan = document.getElementById("check" + step);
-  const waitTime = (step === 4) ? 30000 : 10000;
+  function saveStepState(step) {
+    if (step === 3 || step === 4) return;
+    const current = JSON.parse(localStorage.getItem("stepsState") || "{}");
+    current["step" + step] = true;
+    current.timestamp = Date.now();
+    localStorage.setItem("stepsState", JSON.stringify(current));
+  }
 
-  // ✅ الخطوة 4: إذا كانت مكتملة، فقط افتح الرابط بدون البوب
-  if (step === 4) {
-    if (step4Data.completed) {
-      window.open(url, "_blank");
+  function completeStep(step, url) {
+    const checkSpan = document.getElementById("check" + step);
+    const waitTime = (step === 4) ? 30000 : 10000;
+
+    // خطوة تيليجرام
+    if (step === 4) {
+      if (step4Data.completed) {
+        window.open(url, "_blank");
+        return;
+      }
+
+      const popup = document.createElement("div");
+      popup.id = "popupOverlay";
+      popup.style.cssText = `
+        position:fixed;top:0;left:0;width:100%;height:100%;
+        background:rgba(0,0,0,0.75);display:flex;align-items:center;
+        justify-content:center;z-index:9999;
+      `;
+
+      const box = document.createElement("div");
+      box.style.cssText = `
+        background:#111;color:white;border-radius:15px;padding:25px;
+        max-width:90%;width:400px;text-align:center;
+        border:2px solid #00ffff;box-shadow:0 0 15px #0ff;font-size:16px;
+      `;
+
+      box.innerHTML = `
+        <h3 style="color:gold;margin-bottom:15px;font-size:20px;">📌 ملحوظة هامة جداً</h3>
+        <p style="line-height:1.7;">
+          يجب عليك الاشتراك في قناة التيليجرام لكي يتم فتح لك رابط التحميل<br>
+          وأيضًا لأننا سننشر سكريبت فري فاير أسطوري على قناة التيليجرام فقط 🔥
+        </p>
+        <a href="${url}" target="_blank" id="popupOkBtn" style="
+          margin-top:20px;padding:10px 22px;background:#00cc00;color:white;
+          border-radius:8px;font-weight:bold;cursor:pointer;
+          box-shadow:0 0 10px #0f0;transition:0.3s;font-size:16px;
+          display:inline-block;text-decoration:none;
+        ">📥 اضغط هنا للاشتراك 📥</a>
+      `;
+
+      popup.appendChild(box);
+      document.body.appendChild(popup);
+
+      document.getElementById("popupOkBtn").onclick = () => {
+        popup.remove();
+        checkSpan.innerHTML = '<span class="loading"></span>';
+
+        setTimeout(() => {
+          document.getElementById("step4").classList.add("completed");
+          checkSpan.innerText = "✅";
+          localStorage.setItem(step4StorageKey, JSON.stringify({ completed: true, timestamp: Date.now() }));
+          unlockButtons();
+          updateProgressBar();
+          window.open(url, "_blank");
+        }, waitTime);
+      };
       return;
     }
 
-    // ⬇️ إظهار البوب أول مرة فقط
-    const popup = document.createElement("div");
-    popup.id = "popupOverlay";
-    popup.style.cssText = `
-      position:fixed;top:0;left:0;width:100%;height:100%;
-      background:rgba(0,0,0,0.75);display:flex;align-items:center;
-      justify-content:center;z-index:9999;
-    `;
+    // باقي الخطوات
+    checkSpan.innerHTML = '<span class="loading"></span>';
+    window.open(url, "_blank");
 
-    const box = document.createElement("div");
-    box.style.cssText = `
-      background:#111;color:white;border-radius:15px;padding:25px;
-      max-width:90%;width:400px;text-align:center;
-      border:2px solid #00ffff;box-shadow:0 0 15px #0ff;font-size:16px;
-    `;
+    setTimeout(() => {
+      document.getElementById("step" + step).classList.add("completed");
+      checkSpan.innerText = "✅";
+      const nextStep = document.getElementById("step" + (step + 1));
+      if (nextStep) nextStep.classList.add("active");
 
-    box.innerHTML = `
-      <h3 style="color:gold;margin-bottom:15px;font-size:20px;">📌 ملحوظة هامة جداً</h3>
-      <p style="line-height:1.7;">
-        يجب عليك الاشتراك في قناة التيليجرام لكي يتم فتح لك رابط التحميل<br>
-        وأيضًا لأننا سننشر سكريبت فري فاير أسطوري على قناة التيليجرام فقط 🔥
-      </p>
-      <a href="${url}" target="_blank" id="popupOkBtn" style="
-        margin-top:20px;padding:10px 22px;background:#00cc00;color:white;
-        border-radius:8px;font-weight:bold;cursor:pointer;
-        box-shadow:0 0 10px #0f0;transition:0.3s;font-size:16px;
-        display:inline-block;text-decoration:none;
-      ">📥 اضغط هنا للاشتراك 📥</a>
-    `;
+      if (step === 3) {
+        localStorage.setItem(step3StorageKey, JSON.stringify({ completed: true, timestamp: Date.now() }));
+      } else {
+        saveStepState(step);
+      }
 
-    popup.appendChild(box);
-    document.body.appendChild(popup);
-
-    document.getElementById("popupOkBtn").onclick = () => {
-      popup.remove();
-      checkSpan.innerHTML = '<span class="loading"></span>';
-
-      setTimeout(() => {
-        document.getElementById("step" + step).classList.add("completed");
-        checkSpan.innerText = "✅";
-        const nextStep = document.getElementById("step" + (step + 1));
-        if (nextStep) nextStep.classList.add("active");
-
-        const data = { completed: true, timestamp: Date.now() };
-        localStorage.setItem("step4State_ff_v1_script1vip", JSON.stringify(data));
-
-        unlockButtons();
-        updateProgressBar();
-
-        // ✅ بعد إكمال الخطوة، يفتح الرابط تلقائيًا
-        window.open(url, "_blank");
-      }, waitTime);
-    };
-
-    return;
+      unlockButtons();
+      updateProgressBar();
+    }, waitTime);
   }
-
-  // ✅ باقي الخطوات
-  checkSpan.innerHTML = '<span class="loading"></span>';
-  window.open(url, "_blank");
-
-  setTimeout(() => {
-    document.getElementById("step" + step).classList.add("completed");
-    checkSpan.innerText = "✅";
-    const nextStep = document.getElementById("step" + (step + 1));
-    if (nextStep) nextStep.classList.add("active");
-
-    if (step === 3) {
-      const data = { completed: true, timestamp: Date.now() };
-      localStorage.setItem(step3StorageKey, JSON.stringify(data));
-    } else {
-      saveStepState(step);
-    }
-
-    unlockButtons();
-    updateProgressBar();
-  }, waitTime);
-}
-
 
   function rotateStepLinks() {
     const checkSpan = document.getElementById("check3");
@@ -378,8 +368,7 @@
     setTimeout(() => {
       document.getElementById("step3").classList.add("completed");
       checkSpan.innerText = "✅";
-      const data = { completed: true, timestamp: Date.now() };
-      localStorage.setItem(step3StorageKey, JSON.stringify(data));
+      localStorage.setItem(step3StorageKey, JSON.stringify({ completed: true, timestamp: Date.now() }));
       document.getElementById("step4").classList.add("active");
       unlockButtons();
       updateProgressBar();
@@ -387,7 +376,9 @@
   }
 
   function unlockButtons() {
-    const allCompleted = [1, 2, 3, 4].every(i => document.getElementById("step" + i).classList.contains("completed"));
+    const allCompleted = [1, 2, 3, 4].every(i =>
+      document.getElementById("step" + i).classList.contains("completed")
+    );
     if (allCompleted) {
       document.getElementById("finalMessage").innerText = '✅ تم تنفيذ كل الخطوات بنجاح';
       document.getElementById("finalMessage").style.color = 'lime';
@@ -431,6 +422,7 @@
     }
   });
 </script>
+
 
 </body>
 </html>
