--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
   }
 
   function goToApk() {
-    window.open("https://www.mediafire.com/file/hyrm7h9uku7a87l/MRGAMESFF_free_fire_script_v1.rar/file", "_blank");
+    window.open("https://shr2.link/eFsv");
   }
 
   function copyPassword() {
